---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-9-16
  Features:
    - Better mod thumbnail
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2023-9-15
  Features:
    - Removed grindy stone mining in the early game
    - "Fixed" the pipe connections for the burner mining drill
    - Added a new use for tar
    - Sped up the coal gas voiding recipe 5x
    - Added a new use for oxygen
    - Fixed some issues with Py touched by an angel
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2023-9-15
  Features:
    - Fixed weird fluidboxes for neutron absorbers
    - Fixed forced_value for AAI loaders setting was not applied properly
    - Removed .git folder from mod files
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2023-9-15
  Features:
    - Add zh-CN translation
    - Fixed that the Pyblock compatibility wasn't working
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2023-9-14
  Features:
    - Fixed that copper wasn't minable
    - Nerfed vatbrains
    - Fixed that muddy sludge was too easy to void
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2023-9-14
  Features:
    - Inital release